tests/fixtures/guardrails/valid/app/routes/products-const.ts
import { loadHealthCheck } from "~/app/services/health.server";

export const loader = async () => loadHealthCheck();
