tests/fixtures/guardrails/invalid/route-precomputed-business-logic/app/routes/products.ts
const loaderResult = " hat ".trim();

export const loader = async () => loaderResult;
